chore: clean up imports, add @NotNull annotations, and refactor slot handling
- Remove unused imports across multiple files.
- Add `@NotNull` annotations to comply with stricter null analysis.
- Refactor repetitive slot-handling code to leverage `SortHandler.getTargetSlots`.
- Improve code readability by addressing formatting inconsistencies.